# cheetah-string

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yaml  release.yml
bench-results/: README.md
bench-results/packed-evidence/20260624-130416/: fuzz-packed-from-bytes.txt  fuzz-packed-push-str.txt  packed-asan.txt  packed-bench.txt  packed-miri.txt  packed-test.txt  summary.md
benches/: cheetah.rs  comprehensive.rs  layout.rs  mq_properties.rs  mq_remoting_header.rs  mq_topic.rs  mutation.rs  packed.rs  pattern.rs  simd.rs
docs/: simd-portability.md
examples/: char_methods.rs  comprehensive_patterns.rs  pattern_matching.rs  simd_demo.rs  test_empty_pattern.rs  test_split_behavior.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: packed_from_bytes.rs  packed_push_str.rs
scripts/: bench-all.ps1  bench-all.sh  verify-packed.ps1
src/: builder.rs  bytes.rs  cheetah_str.rs  cheetah_string.rs  error.rs  inline.rs  lib.rs  packed.rs  search.rs  serde.rs  simd.rs  unsafe_proof.md
src/cheetah_string/: pattern.rs  repr.rs
tests/: api_extensions.rs  basic.rs  bytes.rs  comprehensive_tests.rs  layout_snapshot.rs  mutation.rs  packed.rs  patterns.rs  search.rs  serde.rs  simd.rs  split_edge_cases.rs  sso.rs  type_split.rs
