[package]
name = "cheetah-string"
version = "0.1.6"
authors = ["mxsm <mxsm@apache.org>"]
edition = "2021"
homepage = "https://github.com/mxsm/cheetah-string"
repository = "https://github.com/mxsm/cheetah-string"
license = "MIT OR Apache-2.0"
keywords = ["fast", "fast-string", "bytes", "rust", "rocketmq-rust"]
categories = ["network-programming"]
readme = "README.md"
rust-version = "1.75.0"
description = """
A lightweight, high-performance string manipulation library optimized for speed-sensitive applications
"""

[dependencies]
bytes = "1.10.0"
serde = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = []
serde = ["serde/alloc"]
bytes = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "cheetah"
harness = false